# lab02

./: README.md
dsa/01/: Project1.dev  main.cpp  meson.build  rb.cpp  rb.h
dsa/01/src/: main.cpp  rb.cpp  rb.h
dsa/02/: meson.build
dsa/02/src/: main.cpp  osaka.hpp  trie.cpp  trie.hpp
dsa/03/: meson.build
dsa/03/src/: fibheap.cpp  fibheap.hpp  main.cpp
internet/01/: 11-12.html  13.html  style.css
internet/03/: index.html  style.css
oop/1/: Task1.cpp  Task2.cpp
oop/2/: Task1.cpp
